@@ -53,5 +53,9 @@ private:
 
 	int lastErr;
 
+#if LIBAVFORMAT_VERSION_MAJOR <= 55
+	AVDictionary *metadata;
+#endif
+
 	QMutex &avcodec_mutex;
 };
