@@ -1,3 +1,6 @@
+Zmiany w QMPlay2 build 15.06.04:
+	- kompatybilność z FFMpeg 2.0 oraz 2.1,
+
 Zmiany w QMPlay2 build 15.05.30:
 	- poprawa drag and drop na playliście,
 	- przyspieszenie ładowania playlisty,
